fix: truncate url embed titles

--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -1164,6 +1164,10 @@ button[disabled] {
 		padding: 8px;
 		max-width: 320px;
 
+		& header {
+			@include truncate;
+		}
+
 		& .title {
 			font-weight: bold;
 		}
